[gd_scene load_steps=23 format=3 uid="uid://deqguf0burvvx"]

[ext_resource type="Texture2D" uid="uid://bqfn0ada8ia1p" path="res://assets/sprites/etc/tiki_torch_props_strip_12.png" id="1_d4v33"]
[ext_resource type="Script" uid="uid://c3o88eqwok6co" path="res://scripts/etc/torch.gd" id="1_o2tjn"]
[ext_resource type="Texture2D" uid="uid://bempppfxcj7jn" path="res://assets/sprites/etc/ligthTexture.png" id="2_my26j"]
[ext_resource type="AudioStream" uid="uid://ul8d0pu62cwy" path="res://assets/audio/fire-sound-334130.wav" id="4_r3k50"]
[ext_resource type="LabelSettings" uid="uid://c4rclxveufk8v" path="res://resources/fonts.tres" id="5_ndh0a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_my26j"]
atlas = ExtResource("1_d4v33")
region = Rect2(0, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2tjn"]
atlas = ExtResource("1_d4v33")
region = Rect2(8, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3k50"]
atlas = ExtResource("1_d4v33")
region = Rect2(16, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndh0a"]
atlas = ExtResource("1_d4v33")
region = Rect2(24, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktql7"]
atlas = ExtResource("1_d4v33")
region = Rect2(32, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gybtl"]
atlas = ExtResource("1_d4v33")
region = Rect2(40, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_21l5o"]
atlas = ExtResource("1_d4v33")
region = Rect2(48, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjrvc"]
atlas = ExtResource("1_d4v33")
region = Rect2(56, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bkw1"]
atlas = ExtResource("1_d4v33")
region = Rect2(64, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_etrdt"]
atlas = ExtResource("1_d4v33")
region = Rect2(72, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1r1x"]
atlas = ExtResource("1_d4v33")
region = Rect2(80, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1df0"]
atlas = ExtResource("1_d4v33")
region = Rect2(88, 0, 8, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6wph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my26j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2tjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3k50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndh0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktql7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gybtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21l5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjrvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bkw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etrdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1r1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1df0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_o2tjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D2:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_my26j"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D2:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.59),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.16, 4.89]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3k50"]
_data = {
&"RESET": SubResource("Animation_o2tjn"),
&"default": SubResource("Animation_my26j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3k50"]
size = Vector2(6, 19)

[node name="Torch" type="Node2D"]
script = ExtResource("1_o2tjn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 0.407843, 1)
sprite_frames = SubResource("SpriteFrames_e6wph")
autoplay = "default"
frame_progress = 0.128077

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(0, -8)
color = Color(0.97853, 0.729821, 0.42833, 1)
energy = 3.16
shadow_enabled = true
texture = ExtResource("2_my26j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r3k50")
}
autoplay = "default"
speed_scale = 0.5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-0.499998, -9)
scale = Vector2(4.75, 3.4)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_r3k50")
volume_db = -10.295
autoplay = true
max_distance = 100.0

[node name="interact" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
visible = false
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_r3k50")

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = -25.0
offset_right = 29.0
offset_bottom = -13.0
text = "Interact"
label_settings = ExtResource("5_ndh0a")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="body_entered" from="interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="interact" to="." method="_on_interact_body_exited"]
